--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     div
      md-sidenav(class="md-sidenav-left site-sidenav" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')")
       md-toolbar(class="md-theme-indigo")
-       img(class="md-toolbar-tools" src="/img/agence.png" )
+       img(class="md-toolbar-tools" src="/img/agence.png" style="width:60% !important; height:70% !important; margin: 8px; 8px")
       md-content
        md-list
         md-list-item(class="md-5-line" ng-click='getConsultores()')
